# dcsam-examples

./: CMakeLists.txt  README.md
data/pointclouds/: bunny_sparse100_part1.xyz  bunny_sparse100_part2.xyz  bunny_sparse10_part1.xyz  bunny_sparse10_part2.xyz  dragon_sparse100_part1.xyz  dragon_sparse100_part2.xyz
examples/: CMakeLists.txt  icp.cpp  robust_pgo_mc.cpp
include/: PosePointFactor.h  pgo_utils.h
